<resources>
    <string name="app_name">Pokedex</string>
    <string name="wid">19.2dp</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="action_settings">Configuraciones</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pokemon_id_plus_0">#</string>
    <string name="pokemon_id_plus_1">#0</string>
    <string name="pokemon_id_plus_2">#00</string>
    <string name="pokemon_list_image_msg">Espera que la imagen cargue!</string>
    <string name="pokemon_details_hp_title">HP</string>
    <string name="pokemon_details_atk_title">ATK</string>
    <string name="pokemon_details_def_title">DEF</string>
    <string name="pokemon_details_sa_title">SA</string>
    <string name="pokemon_details_sd_title">SD</string>
    <string name="pokemon_details_spd_title">SPD</string>
    <string name="loading_msg">Cargando..</string>
    <string name="api_call_error">Hubo un error de conexión \n
        Si el error persiste, reinicia la aplicación</string>
    <string name="pokemon_details_information_title">Información</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_first_fragment">Hello FIRST fragment</string>
    <string name="hello_second_fragment">Fragmento nº 2</string>
    <string name="hello_third_fragment">Fragmento nº 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
