<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:mContext="com.example.camilo.pokedex.fragments.PokemonStatsFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/pokemon_details_information_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        tools:text="Information" />

    <TextView
        android:id="@+id/tv_pokemon_details_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        tools:text="#002" />

    <ImageView
        android:id="@+id/img_pokemon_details_photo"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <TextView
        android:id="@+id/tv_pokemon_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        tools:text="Bulbasaur" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tv_pokemon_details_type1"
            android:layout_width="55dp"
            android:layout_height="55dp" />

        <ImageView
            android:id="@+id/tv_pokemon_details_type2"
            android:layout_width="55dp"
            android:layout_height="55dp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_pokemon_details_hp_title"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="@string/pokemon_details_hp_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="HP" />

            <ProgressBar
                android:id="@+id/pb_pokemon_details_hp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:max="250"
                android:progressTint="#00ADB5"
                android:scaleY="6" />

            <TextView
                android:id="@+id/tv_pokemon_details_hp_value"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_pokemon_details_atk_title"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="@string/pokemon_details_atk_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="ATK" />

            <ProgressBar
                android:id="@+id/pb_pokemon_details_atk"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:max="190"
                android:progressTint="#00ADB5"
                android:scaleY="6" />

            <TextView
                android:id="@+id/tv_pokemon_details_atk_value"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_pokemon_details_def_title"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="@string/pokemon_details_def_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="DEF" />

            <ProgressBar
                android:id="@+id/pb_pokemon_details_def"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:max="230"
                android:progressTint="#00ADB5"
                android:scaleY="6" />

            <TextView
                android:id="@+id/tv_pokemon_details_def_value"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_pokemon_details_sa_title"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="@string/pokemon_details_sa_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="SA" />

            <ProgressBar
                android:id="@+id/pb_pokemon_details_sa"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:max="608"
                android:progressTint="#00ADB5"
                android:scaleY="6" />

            <TextView
                android:id="@+id/tv_pokemon_details_sa_value"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_pokemon_details_sd_title"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="@string/pokemon_details_sd_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="SD" />

            <ProgressBar
                android:id="@+id/pb_pokemon_details_sd"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:max="1000"
                android:progressTint="#00ADB5"
                android:scaleY="6" />

            <TextView
                android:id="@+id/tv_pokemon_details_sd_value"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_pokemon_details_spd_title"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:text="@string/pokemon_details_spd_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="SPD" />

            <ProgressBar
                android:id="@+id/pb_pokemon_details_spd"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:max="160"
                android:progressTint="#00ADB5"
                android:scaleY="6" />

            <TextView
                android:id="@+id/tv_pokemon_details_spd_value"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="22" />
        </TableRow>
    </TableLayout>

</LinearLayout>

